--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -14,7 +14,7 @@ output {
     hosts => ["https://localhost:9200"]
     index => "%{[@metadata][beat]}-%{[@metadata][version]}"
     user => "elastic"
-    password => "XQA7*2r1Q*MW0qU3sTWa"
+    password => "{{ lookup('aws_ssm', 'infra.elk.elasticsearch_password', region='us-east-1' ) }}"
     ssl_certificate_verification => false
   }
 }
