--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -27,7 +27,7 @@
     state: restarted
     enabled: yes
 
-#- name: install filebeat
-#  ansible.builtin.import_role:
-#    name: elk
-#    tasks_from: filebeat
+- name: install filebeat
+  ansible.builtin.import_role:
+    name: elk
+    tasks_from: filebeat
