--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -26,7 +26,7 @@ scrape_configs:
     # scheme defaults to 'http'.
 
     static_configs:
-      - targets: ["172.31.16.19:9090"]
+      - targets: ["frontend.malleswaridevops.online:9090"]
 
   - job_name: "prometheus"
 
