--- a/roles/prometheus/tasks/node_exporter.yml
+++ b/roles/prometheus/tasks/node_exporter.yml
@@ -1,5 +1,5 @@
 - name: node exporter downloaded
   ansible.builtin.unarchive:
-    src: "node_exporter-1.7.0.linux-amd64.tar.gz"
+    src: "https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-amd64.tar.gz"
     dest: "/opt"
     remote_src: yes
