--- a/roles/prometheus/tasks/node_exporter.yml
+++ b/roles/prometheus/tasks/node_exporter.yml
@@ -1,5 +1,17 @@
 - name: node exporter downloaded
   ansible.builtin.unarchive:
-    src: "https://github.com/prometheus/node_exporter/releases/download/v1.7.0/node_exporter-1.7.0.linux-amd64.tar.gz"
+    src: "https://github.com/prometheus/node_exporter/releases/download/v{{Node_exporter_version}}/node_exporter-{{Node_exporter_version}}.linux-amd64.tar.gz"
     dest: "/opt"
     remote_src: yes
+
+- name: copy service file
+  ansible.builtin.template:
+    src: node_exporte.service
+    dest: /etc/systemd/system/node_exporter.service
+
+- name: restart service
+  ansible.builtin.systemd:
+    name: node_exporter
+    state: restarted
+    enabled: yes
+    daemon-reload: yes
