--- a/roles/prometheus/tasks/node-exporter.yml
+++ b/roles/prometheus/tasks/node-exporter.yml
@@ -6,7 +6,7 @@
 
 - name: copy service file
   ansible.builtin.template:
-    src: node-exporte.service
+    src: node-exporter.service
     dest: /etc/systemd/system/node-exporter.service
 
 - name: restart service
