--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -35,4 +35,4 @@ scrape_configs:
     # scheme defaults to 'http'.
 
     static_configs:
-      - targets: ["frontend.malleswaridevops.online:9100"]
+      - targets: ["172.31.16.19:9100","172.31.19.174:9100","172.31.27.208:9100"]
