--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -48,3 +48,8 @@
     state: restarted
     enabled: yes
     daemon-reload: yes
+
+- name: install node_exporter
+  ansible.builtin.import_role:
+    name: prometheus
+    tasks_from: node-exporter
