--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -8,6 +8,11 @@
     src: record.yml
     dest: /opt/prometheus/record.yml
 
+- name: copy prometheus config - alerts file
+  ansible.builtin.template:
+    src: alerts.yml
+    dest: /opt/prometheus/alerts.yml
+
 - name: restart prometheus
   ansible.builtin.systemd:
     name: prometheus
